--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Dan Cannon</h1>
-							<p class="major">I am a Full Stack Developer that can bring your ides to life.</p>
+							<p class="major">I am a Full Stack Developer that can bring your ideas to life.</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">My Projects</a></li>
 							</ul>
